fix(jdk17): batch-2 adaptations - List.getFirst()/getLast(), Thread.threadId(), and the two new CI lanes
Mechanical catalog rewrites across 38 files for the constructs javac rejects
under --release 17, plus a JDK 17 pin for the vector-unit-tests and
opencypher-tck-tests lanes, which arrived with this window and build the Java
reactor. ha-integration-tests and bolt-nightly keep their deliberate 21.