@@ -66,7 +66,7 @@ class BucketIteratorCorruptedPlaceholderPointerTest extends TestHelper {
     database.newDocument("CorruptedPlaceholderTest").set("id", 2).save();
     database.commit();
 
-    final LocalBucket bucket = (LocalBucket) type.getBuckets(false).getFirst();
+    final LocalBucket bucket = (LocalBucket) type.getBuckets(false).get(0);
     assertThat(bucket.getTotalPages()).as("both records must fit on a single page").isEqualTo(1);
 
     // The commit above scheduled page 0 for an ASYNC flush (PageManagerFlushThread). Drain that queue before
