@@ -288,7 +288,7 @@ class Issue5870VectorIndexIdRenumberingTest extends TestHelper {
       assertThat(rs.hasNext()).isTrue();
       final List<Map<String, Object>> neighbors = rs.next().getProperty("neighbors");
       assertThat(neighbors).as("neighbors of doc%d", vertex).isNotEmpty();
-      assertThat(neighbors.getFirst().get("id")).as("closest vector to doc%d", vertex).isEqualTo("doc" + vertex);
+      assertThat(neighbors.get(0).get("id")).as("closest vector to doc%d", vertex).isEqualTo("doc" + vertex);
     });
   }
 }
