@@ -235,7 +235,7 @@ class Issue6105WriteAfterCompactionTest extends TestHelper {
       assertThat(rs.hasNext()).isTrue();
       final List<Map<String, Object>> neighbors = rs.next().getProperty("neighbors");
       assertThat(neighbors).as("neighbors must not be empty").isNotEmpty();
-      holder[0] = (String) neighbors.getFirst().get("id");
+      holder[0] = (String) neighbors.get(0).get("id");
     });
     return holder[0];
   }
