@@ -36,7 +36,7 @@ class Issue6179LiteralExpressionTest extends AbstractParserTest {
 
   private Expression rightOperandOf(final String query) {
     final SelectStatement statement = (SelectStatement) checkRightSyntax(query);
-    final BooleanExpression term = statement.whereClause.flatten().getFirst().subBlocks.getFirst();
+    final BooleanExpression term = statement.whereClause.flatten().get(0).subBlocks.get(0);
     return ((BinaryCondition) term).right;
   }
 
